[package]
name = "yiyu-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["local-offset"] }
yiyu-core = { path = "../yiyu-core" }
