[package]
name = "yiyu-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "time"] }
time = { version = "0.3", features = ["local-offset"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
